# MatEngine

./: LICENSE  README.md
minGW/include/: MatEngine.h
test_card_game/: CMakeLists.txt  card.cpp  test_card_game.cpp
test_card_game/include/: card.h  source_path_in.h  test_card_game.h
